hopefully fixed navmenu on mobile problem

--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -105,7 +105,7 @@
     }
 
     #hello {
-        font-size: 3.5rem;
+        font-size: 3.2rem;
         text-align: center;
         margin-bottom: 5%;
         min-width: 330px;
