--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -4,7 +4,7 @@
     position: sticky;
     top: 0px;
     z-index: 1;
-    height: 0px;
+    height: 0;
     width: 57px;
     margin-left: auto;
     margin-right: 1%;
@@ -94,7 +94,7 @@
         box-shadow: -2px 0 2px rgba($black, 0.3);
         border-bottom-left-radius: 0;
         padding: 0;
-        padding-top: 15%;
+        padding-top: 0.4%;
     }
 
     .nav-link {
@@ -102,8 +102,7 @@
     }
 
     #menu-name {
-        width: 90%;
-        text-align: end;
+        width: 65%;
     }
     
 }
